log

Thu 14 Mar 2024 08:08:20 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
0148e1b
Thu 14 Mar 2024 08:08:29 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
7d47efa
Thu 14 Mar 2024 08:25:09 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
667ffa8
Thu 14 Mar 2024 08:29:53 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
deca5ab
Thu 14 Mar 2024 08:37:50 PM UTC: 
 exercises.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ee5326b
Thu 14 Mar 2024 08:39:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
132b21b
Thu 14 Mar 2024 08:48:38 PM UTC: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
56a51ec
Thu 14 Mar 2024 08:56:34 PM UTC: 
 exercises.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
891abb5
Thu 14 Mar 2024 09:03:18 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
19204e4
Thu 14 Mar 2024 09:07:05 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:106:1: error: control reaches end of non-void function [-Werror=return-type]
  106 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e8d5b3d
Thu 14 Mar 2024 09:07:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
3ce07db
Thu 14 Mar 2024 09:13:14 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:103:27: error: unused variable ‘contDescendente’ [-Werror=unused-variable]
  103 |   int contAscendente = 0, contDescendente = 0;
      |                           ^~~~~~~~~~~~~~~
exercises.c:103:7: error: unused variable ‘contAscendente’ [-Werror=unused-variable]
  103 |   int contAscendente = 0, contDescendente = 0;
      |       ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
edcb243
Thu 14 Mar 2024 09:13:38 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
17e59fe
Fri 15 Mar 2024 12:00:38 PM UTC: 
 exercises.c | 51 +++++++++++++++++++--------------------------------
 1 file changed, 19 insertions(+), 32 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:109:4: error: expected statement before ‘)’ token
  109 |   })
      |    ^
Compilation failed
91e5d15
Fri 15 Mar 2024 12:00:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
e13180f
Fri 15 Mar 2024 12:02:13 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
4a249f2
Fri 15 Mar 2024 12:02:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
f0be162
Fri 15 Mar 2024 12:05:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
c186fac
Fri 15 Mar 2024 12:05:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
bc8a59e
Fri 15 Mar 2024 12:09:14 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
6dd0ced
Fri 15 Mar 2024 12:12:36 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:150:9: error: unused variable ‘ultimo’ [-Werror=unused-variable]
  150 |   Nodo *ultimo = NULL;
      |         ^~~~~~
exercises.c:149:9: error: unused variable ‘cabeza’ [-Werror=unused-variable]
  149 |   Nodo *cabeza = NULL;
      |         ^~~~~~
exercises.c:158:1: error: control reaches end of non-void function [-Werror=return-type]
  158 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e6b159d
